syntax = "proto2";

package rpcDatabaseServer;

message RPC_Request {

  enum Operation {
    GETRECORD = 1;
    ADDRECORD = 2;
    GETSIZE = 3;
  }
  required Operation operation = 1;
  optional GetRecord_Request getRecordRequest = 2;
  optional AddRecord_Request addRecordRequest = 3;

  message GetRecord_Request {
    required int32 index = 1;
  }

  message AddRecord_Request {
    required string record = 1;
    required int32 index = 2;
  }
}
